# poly-alpha-lab

./: .env.example  .gitignore  README.md  journal_draft.json  journal_export.csv  pyproject.toml  strategy_candidates.json  strategy_candidates_100_v061.json  strategy_candidates_100_with_longshots.json  strategy_candidates_daily.json  weather_alpha_calibrated.json  weather_alpha_calibrated_quality.json  weather_alpha_mixture.json  weather_alpha_normal.json  weather_alpha_signals.json  weather_alpha_signals_csv_v08.json  weather_alpha_signals_v072.json  weather_alpha_signals_v073.json  weather_alpha_signals_v081.json  weather_alpha_student_t.json  weather_model_diagnostics.csv
.claude/: settings.local.json
data/weather/: calibration_summary.csv  calibration_summary.json  calibration_summary_generated.csv  calibration_summary_generated.json  calibration_summary_real_pilot_30d.csv  calibration_summary_real_pilot_30d.json  calibration_summary_real_smoke.csv  calibration_summary_real_smoke.json  data_source_options.md  (+16 more)
scripts/: run_daily_weather_capture.ps1
tests/: test_candidate_scoring.py  test_daily_capture.py  test_daily_diagnostics.py  test_ev.py  test_filters.py  test_journal.py  test_liquidity.py  test_markdown_report.py  test_market_type_classifier.py  test_models.py  test_resolution_analyzer.py  test_strategy_runner.py  test_weather_alpha.py  test_weather_backtest.py  test_weather_calibration.py  test_weather_dataset_builder.py  test_weather_locations.py  test_weather_model_diagnostics.py  test_weather_probability_model.py  test_weather_provider.py
(+787 files in other folders)
