[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poly-alpha-lab"
version = "1.3.3"
description = "Read-only Polymarket Gamma and CLOB research toolkit."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "poly-alpha-lab contributors" }
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
poly-alpha-lab = "poly_alpha_lab.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/poly_alpha_lab"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
